# Consolations

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Consolations.sln  cmake_install.cmake
ArithmetiC/: Program.cs
ArithmetiCoder/: ArithmetiC.sln  Program.cs
AtomicLoopInLoupe/: AtomicLoopInLoupe.cpp  CMakeLists.txt  cmake_install.cmake
Barricade/: Barricade.cpp  CMakeLists.txt  Project.sln  cmake_install.cmake
CClatchCC/: CClatchCC.cpp  CMakeCache.txt  CMakeLists.txt  Project.sln  cmake_install.cmake
ConCoroutine/: Program.cs
Consolating/: Consolating.cpp
Consolations/: Consolations.cpp  Consolations.vcxproj  Consolations.vcxproj.filters
FFT/: CMakeLists.txt  cmake_install.cmake
HoneCScore/: HoneCScore.csproj  Program.cs
LoopInLoupe/: LoopInLoupe.cpp  LoopInLoupe.vcxproj  LoopInLoupe.vcxproj.filters
MetaTemplates/: CMakeLists.txt  MetaTemplates.cpp  cmake_install.cmake
PromiseMyFuture/: PromiseMyFuture.cpp  PromiseMyFuture.vcxproj  PromiseMyFuture.vcxproj.filters
Semaphores/: Semaphores.cpp  Semaphores.vcxproj
SummAnonymous/: CMakeLists.txt  SummAnonymous.cpp  cmake_install.cmake
VariadicAsyncT/: CMakeLists.txt  VariadicAsyncT.cpp  VariadicAsyncT.h  cmake_install.cmake
Variadics/: Variadics.cpp
coroutines/: coroutines.cpp
